--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "url-handler",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@8.10.5",
   "scripts": {
     "dev": "next dev ",
     "build": "next build",
@@ -11,46 +12,46 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.1",
+    "@hookform/resolvers": "^3.3.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.0.0",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@prisma/client": "^5.6.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@tanstack/react-query": "^4.29.25",
-    "@vercel/analytics": "^1.0.1",
-    "aws-sdk": "^2.1419.0",
-    "axios": "^1.4.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.8.4",
+    "@vercel/analytics": "^1.1.1",
+    "aws-sdk": "^2.1498.0",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.3",
-    "lucide-react": "^0.263.0",
-    "next": "13.5.3",
-    "next-auth": "^4.22.1",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^14.0.3",
+    "lucide-react": "^0.292.0",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "zod": "^3.21.4"
+    "nodemailer": "^6.9.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@tanstack/eslint-plugin-query": "^4.29.9",
-    "@tanstack/react-query-devtools": "^4.29.25",
-    "@total-typescript/ts-reset": "^0.5.0",
-    "@types/node": "20.7.2",
-    "@types/nodemailer": "^6.4.8",
-    "@types/react": "18.2.23",
-    "autoprefixer": "^10.4.14",
-    "postcss": "8.4.31",
-    "prisma": "^5.0.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.2.2"
+    "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/eslint-plugin-query": "^5.8.4",
+    "@tanstack/react-query-devtools": "^5.8.4",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/node": "^20.9.1",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react": "^18.2.37",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "prisma": "^5.6.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.2.2"
   }
 }
